--- a/src/_banner.html
+++ b/src/_banner.html
@@ -1,4 +1,4 @@
-<div class="banner container --flex">
+<div class="banner container --flex" id="banner">
   <div class="banner__info --flex">
     <h1 class="header-text">
       Many reasons to get up and start to get back in the business
