--- a/src/_choice.html
+++ b/src/_choice.html
@@ -1,4 +1,4 @@
-<div class="choice container">
+<div class="choice container" id="choice">
   <div class="choice__header">
     <h1 class="header-text">Your Choice</h1>
     <p>
