--- a/src/_promotion.html
+++ b/src/_promotion.html
@@ -1,4 +1,4 @@
-<div class="promotion container --flex">
+<div class="promotion container --flex" id="promotion">
   <div class="promotion__info --flex">
     <h1 class="header-text">
       Invest property for better <span>business</span>
