--- a/src/_header.html
+++ b/src/_header.html
@@ -1,12 +1,12 @@
-<header class="header --flex">
+<header class="header --flex" id="header">
   <div class="header__breadcrumb">
-    <ul class="breadcrumb --flex">
-      <li>ABOUT</li>
-      <li>GALERY</li>
-      <li>PRICING</li>
-      <li>FAQ</li>
-      <li>BENEFITS</li>
-    </ul>
+    <nav class="breadcrumb --flex">
+      <a href="#banner">ABOUT</a>
+      <a href="#choice">GALERY</a>
+      <a href="#promotion">PRICING</a>
+      <a href="#subscription">FAQ</a>
+      <a href="#footer">BENEFITS</a>
+    </nav>
   </div>
   <div class="header__actions --flex">
       <button class="button button-default header_btn">
