--- a/src/_subscription.html
+++ b/src/_subscription.html
@@ -1,4 +1,4 @@
-<div class="subscription container --flex">
+<div class="subscription container --flex" id="subscription">
   <h2>There are many reasons to get down</h2>
   <p>
     There are many reasons to get down and start to get depressed about your
